# SeidarT_Legacy

./: .gitignore  COMMAND_LINE_INTERFACE.md  README.md  array2sac  array2sac.sh  arrayplot.py  arrayplot_debug.py  codisplay.py  common_midpoint  common_midpoint.sh  common_offset  common_offset.sh  conda_build.sh  conda_build_config.yaml  conda_deps.sh  display_functions.py  documentation-environment.yml  electromagfdtd25d.mod  electromagfdtd2d.mod  emFDTD25D.f95  emFDTD2D.f95  env2req.py  im2gif.py  install.sh  install.tar.xz  install_special.sh  io_functions.py  material_functions.py  material_matrices_rw_debug.f95  meta.yaml  noconda_install.sh  orientation_tensor.py  orientsynth.f95  orientsynth_debug.py  prjbuild.py  prjrun.py  pyproject.toml  readsourcefile.f95  seidart_io.py  seismicFDTD25D.f95  (+11 more)
ALMOST_NEGIS/: negis1.prj  wide_angle.sh
EXAMPLES/: common_midpoint_x.csv  common_midpoint_z.csv  common_offset_x.csv  common_offset_z.csv  dipping_bed.prj  reciever1.sac  reciever10.sac  reciever11.sac  reciever12.sac  reciever13.sac  reciever14.sac  reciever15.sac  reciever16.sac  reciever17.sac  reciever18.sac  reciever19.sac  reciever2.sac  reciever20.sac  reciever21.sac  reciever22.sac  reciever23.sac  reciever24.sac  reciever25.sac  reciever26.sac  reciever3.sac  reciever4.sac  reciever5.sac  reciever6.sac  reciever7.sac  reciever8.sac  reciever9.sac  reciever_array.csv  shapes.0528191704.Ex.co.csv  shapes.0528191704.Ez.co.csv  shapes.0528191704.meta.txt  shapes.0529191449.meta.txt  shapes.prj  temp.txt  test_euler_angles.txt
NEGIS/: co_debug.sh  one_more_vector.csv  (+4 more)
(+474 files in other folders)
